--- a/app/views/users/_result.html.erb
+++ b/app/views/users/_result.html.erb
@@ -3,5 +3,17 @@
   <%= @stock.ticker %>
   <%=@stock.name%>
   <%=@stock.last_price%>
+  <% if current_user.can_add_stock?(@stock.ticker)%>
+  <%= link_to "add to my stocks" , user_stocks_path(user: current_user,stock_ticker: @stock.ticker),
+          class: "btn btn-xs btn-success",method: :post%>
+  <% else %>
+  <span class = "label label-default">
+    <% if !current_user.under_stock_limit? %>
+      you already added  10 stocks which is your limit
+    <% else %>
+      you already added this stock 
+    <% end %>
+  </span>
+  <% end %>
 </div>
 <% end %>
